sg_tower.tf
##Security groups
resource "aws_security_group" "tower_sg" {
    name = "tower_sg_gk"
    description = "Used to access the tower instance"
    vpc_id = "${aws_vpc.tower_vpc.id}"

    ##SSH config

    ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  #HTTP
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }


}
